// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Windows should render for default values 1`] = `
<div>
  <div
    style="position: absolute; z-index: 0; left: 0px; top: 0px; transform: translate(112px, 622.8px) scale(0.01); opacity: 0; pointer-events: none; visibility: hidden; transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.4s ease-in-out, visibility 0.4s;"
  >
    <div
      data-testid="draggable-provider"
    >
      <div
        data-testid="resizable-box"
      >
        <div
          class="css-fjdgft"
        >
          <div
            class="handle css-15s8592"
          >
            <div
              class="css-axw7ok"
              data-testid="traffic-lights"
            >
              <div
                aria-label="close"
                class="css-trrl7s"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
                    stroke="#4C0002"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="minimize"
                class="css-pklp1d"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 3H5"
                    stroke="#5C3E00"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="maximize"
                class="css-12g04q5"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
                    stroke="#004D05"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1"
                  />
                </svg>
              </div>
            </div>
            <div
              class="css-1bc9bee"
            >
              <div>
                Top bar
              </div>
            </div>
          </div>
          <div
            class="css-1qx9vnh"
          >
            <div>
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should render maximized window 1`] = `
<div>
  <div
    style="position: absolute; z-index: 0; left: 0px; top: 0px; transform: translate(112px, 622.8px) scale(0.01); opacity: 0; pointer-events: none; visibility: hidden; transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.4s ease-in-out, visibility 0.4s;"
  >
    <div
      data-testid="draggable-provider"
    >
      <div
        data-testid="resizable-box"
      >
        <div
          class="css-fjdgft"
        >
          <div
            class="css-15s8592"
          >
            <div
              class="css-axw7ok"
              data-testid="traffic-lights"
            >
              <div
                aria-label="close"
                class="css-trrl7s"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
                    stroke="#4C0002"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="minimize"
                class="css-pklp1d"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 3H5"
                    stroke="#5C3E00"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="maximize"
                class="css-12g04q5"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
                    stroke="#004D05"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1"
                  />
                </svg>
              </div>
            </div>
            <div
              class="css-1bc9bee"
            />
          </div>
          <div
            class="css-1qx9vnh"
          >
            <div>
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should toggle maximize on double click on title bar 1`] = `
<div>
  <div
    style="position: absolute; z-index: 0; left: 0px; top: 0px; transform: translate(112px, 622.8px) scale(0.01); opacity: 0; pointer-events: none; visibility: hidden; transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.4s ease-in-out, visibility 0.4s;"
  >
    <div
      data-testid="draggable-provider"
    >
      <div
        data-testid="resizable-box"
      >
        <div
          class="css-fjdgft"
        >
          <div
            class="css-15s8592"
          >
            <div
              class="css-axw7ok"
              data-testid="traffic-lights"
            >
              <div
                aria-label="close"
                class="css-trrl7s"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
                    stroke="#4C0002"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="minimize"
                class="css-pklp1d"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 3H5"
                    stroke="#5C3E00"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="maximize"
                class="css-12g04q5"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
                    stroke="#004D05"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1"
                  />
                </svg>
              </div>
            </div>
            <div
              class="css-1bc9bee"
            />
          </div>
          <div
            class="css-1qx9vnh"
          >
            <div>
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should trigger close on close button press 1`] = `
<div>
  <div
    style="position: absolute; z-index: 0; left: 0px; top: 0px; transform: translate(112px, 622.8px) scale(0.01); opacity: 0; pointer-events: none; visibility: hidden; transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.4s ease-in-out, visibility 0.4s;"
  >
    <div
      data-testid="draggable-provider"
    >
      <div
        data-testid="resizable-box"
      >
        <div
          class="css-fjdgft"
        >
          <div
            class="handle css-15s8592"
          >
            <div
              class="css-axw7ok"
              data-testid="traffic-lights"
            >
              <div
                aria-label="close"
                class="css-trrl7s"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
                    stroke="#4C0002"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="minimize"
                class="css-pklp1d"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 3H5"
                    stroke="#5C3E00"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="maximize"
                class="css-12g04q5"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
                    stroke="#004D05"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1"
                  />
                </svg>
              </div>
            </div>
            <div
              class="css-1bc9bee"
            />
          </div>
          <div
            class="css-1qx9vnh"
          >
            <div>
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should trigger maximize on maximize button press 1`] = `
<div>
  <div
    style="position: absolute; z-index: 0; left: 0px; top: 0px; transform: translate(112px, 622.8px) scale(0.01); opacity: 0; pointer-events: none; visibility: hidden; transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.4s ease-in-out, visibility 0.4s;"
  >
    <div
      data-testid="draggable-provider"
    >
      <div
        data-testid="resizable-box"
      >
        <div
          class="css-fjdgft"
        >
          <div
            class="css-15s8592"
          >
            <div
              class="css-axw7ok"
              data-testid="traffic-lights"
            >
              <div
                aria-label="close"
                class="css-trrl7s"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
                    stroke="#4C0002"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="minimize"
                class="css-pklp1d"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 3H5"
                    stroke="#5C3E00"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="maximize"
                class="css-12g04q5"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
                    stroke="#004D05"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1"
                  />
                </svg>
              </div>
            </div>
            <div
              class="css-1bc9bee"
            />
          </div>
          <div
            class="css-1qx9vnh"
          >
            <div>
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should trigger minimize on minimize button press 1`] = `
<div>
  <div
    style="position: absolute; z-index: 0; left: 0px; top: 0px; transform: translate(112px, 622.8px) scale(0.01); opacity: 0; pointer-events: none; visibility: hidden; transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.4s ease-in-out, visibility 0.4s;"
  >
    <div
      data-testid="draggable-provider"
    >
      <div
        data-testid="resizable-box"
      >
        <div
          class="css-fjdgft"
        >
          <div
            class="handle css-15s8592"
          >
            <div
              class="css-axw7ok"
              data-testid="traffic-lights"
            >
              <div
                aria-label="close"
                class="css-trrl7s"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 1.2L4.8 4.8M4.8 1.2L1.2 4.8"
                    stroke="#4C0002"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="minimize"
                class="css-pklp1d"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 3H5"
                    stroke="#5C3E00"
                    stroke-linecap="round"
                    stroke-width="1.2"
                  />
                </svg>
              </div>
              <div
                aria-label="maximize"
                class="css-12g04q5"
              >
                <svg
                  fill="none"
                  height="6"
                  style="opacity: 0; transition: opacity 0.15s ease;"
                  viewBox="0 0 6 6"
                  width="6"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.2 4.8L4.8 1.2M1.2 4.8H3.8M1.2 4.8V2.2M4.8 1.2L1.2 4.8M4.8 1.2H2.2M4.8 1.2V3.8"
                    stroke="#004D05"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1"
                  />
                </svg>
              </div>
            </div>
            <div
              class="css-1bc9bee"
            />
          </div>
          <div
            class="css-1qx9vnh"
          >
            <div>
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
